# foxyz

./: .gitignore  ATTRIBUTION.md  Dockerfile  FOXYZ_MASTER_PLAN.md  Makefile  README.md  install.sh  multibuild.py  pyproject.toml  run.py  test_browser.py  test_fingerprint_audit.py  test_fptc_debug.py  test_fptc_debug2.py  test_fptc_debug3.py  test_fptc_debug4.py  test_fptc_debug5.py  test_fptc_debug6.py  test_iframe_js.py  test_inject_direct.py  test_jsurl_on_pixelscan.py  test_keyword_search.py  test_pixelscan_audit.py  test_pixelscan_final.py  test_pixelscan_v2.py  test_route_debug.py  test_search.py  test_search2.py  test_search_debug.py  test_search_fix.py  test_urlbar_search.py  test_workaround.py  test_workaround_debug.py
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
assets/: base.mozconfig
build-tester/: README.md  package-lock.json  package.json  requirements.txt
docs/: beta-testing-ff146.md  patch-upgrading-guide.md  per-context-patches.md  playwright-maintenance.md
example/: async_example.py  example.py  example_simple.py
foxyz/: __init__.py  _warnings.py  addons.py  async_api.py  exceptions.py  fingerprints.py  geolocation.py  locales.py  multiversion.py  page_init.py  pkgman.py  repos.yml  sync_api.py  utils.py  virtdisplay.py  warnings.yml
jsonvv/: README.md  pyproject.toml
legacy/: README.md
patches/: anti-font-fingerprinting.patch  browser-init.patch  canvas-spoofing.patch  chromeutil.patch  config.patch  disable-extension-newtab.patch  disable-remote-subframes.patch  font-list-spoofing.patch  geolocation-spoofing.patch  locale-spoofing.patch  macos-sandbox-crash-fix.README.md  measuretext-spoofing.patch  navigator-spoofing.patch  no-search-engines.patch  screen-spoofing.patch  speech-voices-spoofing.patch  timezone-spoofing.patch  (+3 more)
(+97 files in other folders)
